# qnnpy

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  environment.yml  flake.nix  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  python-publish2.yml
config/: example.yml  snspd_example_ICE.yml  vna_ceo _cal.yml  vna_ceo.yml
docs/: api.rst  conf.py  dev_install.rst  index.rst  requirements.txt  user_install.rst
docs/Manuals and Data Sheets/: gpib commands for agilent counter.txt
docs/examples/: snspd_example_script.py  snspd_test_script.py  test.py
docs/measurement scripts/: AQ_Isw_paper.py  PNA_measurement.py  SPG806_C3_bert.py  VNA_CEO.py  ic_test_with_SRS.py  ic_test_with_YOKO - Copy.py  ic_test_with_YOKO.py  lecroy_trace_acquisition.py  lecroy_trace_acquisition_backup.py  standard_SNSPD_testing_dizhu.py
examples/: Thumbs.db  snspd_test_script.py  test.py
examples/config/: snspd_example_300mk.yml
measurement scripts/: AQ_Isw_paper.py  PNA_measurement.py  SPG806_C3_bert.py  TWPA_sweep.py  VNA_CEO.py  ic_test_with_YOKO - Copy.py  ic_test_with_YOKO.py  lecroy_trace_acquisition_backup.py  quantum_walk_array_flood_illumination.py  standard_SNSPD_testing_dizhu.py
measurement scripts/attocube scanning (old_version_pls_rewrite)/: attocube_1d_scan.py  attocube_1d_step.py  attocube_scan.py  attocube_scan_step_by_step.py  attocube_scan_step_by_step_by_read_powermeter.py  attocube_scan_z_step_focusing.py  repeatability_test.py  (+1 more)
measurement(outdated_delete_after_transfer)/: LogTempOnProbeStation.py  PNA_measurement.py  SNSPD_test_MontanaII.py  SPDC_temp.py  aed_iv_hysteresis_loop.py  count_vs_time.py  counts_vs_bias.py  ic_b_sensing_memory.py  ic_sweep.py  ic_sweep_script.py  ic_sweep_script_vs_current.py  ic_test_with_SRS.py  imager_trace_aquisition_di.py  isw_and_ir_vs_temperature.py  iv_curve_keithley.py  lecroy_trace_acquisition.py  make_gds_for_COMSOL_simulation.py  measure_R_cont.py  shaped_nanowire_scripts.py  snspd_jitter_switching_rate.py  standard_SNSPD_testing_dizhu.py  sweep_attenuation_record_pulse_height_dizhu.py  sweep_input_optical_power.py  taper_sweep.py  trace_acquisition_adapted_from_Zhao.py  twpa_double_pump_sweep.py
qnnpy.egg-info/: PKG-INFO  SOURCES.txt
(+172 files in other folders)
