[tool.ruff]
lint.ignore = ["F841", "E731", "E501"]
lint.extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "qnnpy"
version = "0.2.0"

authors = [
  { name="O. Medeiros", email="omedeiro@mit.edu" },
  { name="E. Battson", email="emmabat@mit.edu" },
  { name="A. Simon", email="alejansi@mit.edu" },
  { name="R. Foster", email="reedf@mit.edu" },
]

maintainers = [
  { name="O. Medeiros", email="omedeiro@mit.edu" },
]

description = "The QNN library for instrument control"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["nanowire_electronics", "instrument control"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

dependencies = [
  "numpy",
  "pyyaml",
  "pyvisa",
  "mariadb",
  "pandas",
  "nptdms",
  "scipy",
  "matplotlib"
]

[project.urls]
Homepage = "https://github.com/qnngroup/qnnpy"
Issues = "https://github.com/qnngroup/qnnpy/issues"
Documentation = "https://qnnpy.readthedocs.io/en/latest/"
